--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "next": "14.0.2",
     "react": "^18",
-    "react-dom": "^18",
-    "sass": "^1.69.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -22,6 +21,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
     "postcss": "^8",
+    "sass": "^1.69.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
